--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>
   {{title}}
-  <button (click)="login()">ok</button>
+
 </h1>
+<app-patient-info></app-patient-info>
+<app-patient-status></app-patient-status>
+<app-patient-timeline></app-patient-timeline>
+<app-patient-history></app-patient-history>
