--- a/src/app/components/patient-status/patient-status.component.html
+++ b/src/app/components/patient-status/patient-status.component.html
@@ -2,7 +2,22 @@
     patient-status works!
 </p>
 
-<div *ngFor="let item of this.weight, let i = index ">
-    <li>{{item.weight}}{{item.unit}}{{item.time | date: 'dd.MM.yyyy'}}</li>
+<div *ngFor="let item of patientService.weight, let i = index ">
+    <p *ngIf="i < 1">
+        {{item.weight}}{{item.unit}}
+    </p>
 </div>
-<label>{{this.weight | json}}</label><br>
+
+<div *ngFor="let item of patientService.height, let i = index ">
+    <p *ngIf="i < 1">
+        {{item.height}}{{item.unit}}
+    </p>
+</div>
+
+<div *ngFor="let item of patientService.bloodPressure, let i = index ">
+    <p *ngIf="i < 1">
+        {{item.diastolic + "/"}}{{item.systolic}}{{item.unit}}
+    </p>
+</div>
+
+<label>Age:{{patientService.userModel.age | number:'.0-1'}}</label><br>
