--- a/src/app/components/patient-status/patient-status.component.html
+++ b/src/app/components/patient-status/patient-status.component.html
@@ -1,23 +1,28 @@
 <p>
-    patient-status works!
+  patient-status works!
 </p>
+<label>Age:{{patientService.userModel.age | number:'.0-1'}}</label><br>
 
 <div *ngFor="let item of patientService.weight, let i = index ">
-    <p *ngIf="i < 1">
-        {{item.weight}}{{item.unit}}
-    </p>
+  <p *ngIf="i < 1">
+    Weight: {{item.weight}}{{item.unit}}
+  </p>
 </div>
 
 <div *ngFor="let item of patientService.height, let i = index ">
-    <p *ngIf="i < 1">
-        {{item.height}}{{item.unit}}
-    </p>
+  <p *ngIf="i < 1">
+    Height: {{item.height}}{{item.unit}}
+  </p>
 </div>
 
 <div *ngFor="let item of patientService.bloodPressure, let i = index ">
-    <p *ngIf="i < 1">
-        {{item.diastolic + "/"}}{{item.systolic}}{{item.unit}}
-    </p>
+  <p *ngIf="i < 1">
+    Blood Pressure: {{item.systolic + "/"}}{{item.diastolic}}{{item.unit}}
+  </p>
+</div>
+<div *ngFor="let item of patientService.spO2, let i = index ">
+  <p *ngIf="i < 1">
+    Oxygen Saturation: {{item.spO2 | number:'.2'}}%
+  </p>
 </div>
 
-<label>Age:{{patientService.userModel.age | number:'.0-1'}}</label><br>
