--- a/src/app/components/patient-timeline/patient-timeline.component.css
+++ b/src/app/components/patient-timeline/patient-timeline.component.css
@@ -1,8 +1,7 @@
 .chart {
   display: block;
 }
-.container {
-  width: 35%;
+.grafikon {
 }
 .center{
   text-align: center;
@@ -22,3 +21,9 @@
 .weight{
   color: #3BAFDA;
 }
+
+/*.panel-primary {*/
+  /*background-color: #3bafda;*/
+  /*color: white;*/
+  /*border-color: #3bafda;*/
+/*}*/
