--- a/src/app/components/patient-timeline/patient-timeline.component.html
+++ b/src/app/components/patient-timeline/patient-timeline.component.html
@@ -1,116 +1,171 @@
-<h2>
-  patient-timeline works!
-</h2>
-<p>Timeline</p>
-<div *ngFor="let item of patientService.presentation, let i = index ">
-  <li>
-    {{item.metadata.startTime | date: "dd-MM-yyyy HH:mm"}}
-    <div>
-      <h4>
-        {{item.metadata.startTime | date: "MM-yyyy"}} {{item.metadata.templateId}}{{' | ' +
-        item.metadata.composer.name}}
-      </h4>
+<div class="panel panel-primary" >
+  <div class="panel-heading">
+    <span style="float:right" class="glyphicon glyphicon-remove"></span>
+    <h3 class="panel-title">Timeline</h3>
+  </div>
+  <div class="panel-body">
+    <div *ngFor="let item of patientService.presentation, let i = index ">
+      <li>
+        {{item.metadata.startTime | date: "dd-MM-yyyy HH:mm"}}
+        <div>
+          <h4>
+            {{item.metadata.startTime | date: "MM-yyyy"}} {{item.metadata.templateId}}{{' | ' +
+            item.metadata.composer.name}}
+          </h4>
+        </div>
+      </li>
     </div>
-  </li>
+  </div>
 </div>
 
-<p>Laboratory Results</p>
-<div *ngFor="let item of patientService.labs, let i = index ">
-  <li>
-    {{item.name}} {{item.loinc}} {{item.normal_min}} {{item.normal_max}} {{item.value}} {{item.unit}} {{item.time |
-    date: "dd-MMM-yyyy' at 'HH:mm"}}
-  </li>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <span style="float:right" class="glyphicon glyphicon-remove"></span>
+    <h3 class="panel-title">Laboratory Results</h3>
+  </div>
+  <div class="panel-body">
+    <div *ngFor="let item of patientService.labs, let i = index ">
+      <li>
+        {{item.name}} {{item.loinc}} {{item.normal_min}} {{item.normal_max}} {{item.value}} {{item.unit}} {{item.time |
+        date: "dd-MMM-yyyy' at 'HH:mm"}}
+      </li>
+    </div>
+  </div>
 </div>
 
 
 <!--BlodPresure-->
-<div class="container">
-  <canvas baseChart *ngIf="patientService.bloodPressureData.length > 0"
-          [datasets]="patientService.bloodPressureData"
-          [labels]="patientService.bloodPressureTime"
-          [options]="bloodPressureOptions"
-          [colors]="bloodPressureColors"
-          [chartType]="'line'">
-  </canvas>
-  <div *ngFor="let item of patientService.bloodPressure, let i = index " class="center">
-    <p *ngIf="i < 1">
-      As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
-    </p>
-    <h3 *ngIf="i < 1" class="blodpresure">
-      {{item.systolic + "/"}}{{item.diastolic}}{{item.unit}}
-    </h3>
+<div class="grafikon" class="col-md-6">
+  <div class="panel panel-danger">
+    <div class="panel-heading">
+      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <h3 class="panel-title">Blod Presure</h3>
+    </div>
+    <div class="panel-body">
+      <canvas baseChart *ngIf="patientService.bloodPressureData.length > 0"
+              [datasets]="patientService.bloodPressureData"
+              [labels]="patientService.bloodPressureTime"
+              [options]="bloodPressureOptions"
+              [colors]="bloodPressureColors"
+              [chartType]="'line'">
+      </canvas>
+      <div *ngFor="let item of patientService.bloodPressure, let i = index " class="center">
+        <p *ngIf="i < 1">
+          As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
+        </p>
+        <h3 *ngIf="i < 1" class="blodpresure">
+          {{item.systolic + "/"}}{{item.diastolic}}{{item.unit}}
+        </h3>
+      </div>
+    </div>
   </div>
 </div>
-<!--BodyTemperature-->
-<div class="container">
-  <canvas baseChart *ngIf="patientService.bodyTemperatureData.length > 0"
-          [datasets]="patientService.bodyTemperatureData"
-          [labels]="patientService.bodyTemperatureTime"
-          [options]="bodyTemperatureOptions"
-          [colors]="bodyTemperatureColors"
-          [chartType]="'bar'">
-  </canvas>
-  <div *ngFor="let item of patientService.bodyTemperature, let i = index " class="center">
-    <p *ngIf="i < 1">
-      As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
-    </p>
-    <h3 *ngIf="i < 1" class="bodytemperature">
-      {{item.temperature}}{{item.unit}}
-    </h3>
-  </div>
-</div>
-<!--Height-->
-<div class="container">
-  <canvas baseChart *ngIf="patientService.heightData.length > 0"
-          [datasets]="patientService.heightData"
-          [labels]="patientService.heightTime"
-          [options]="heightOptions"
-          [colors]="heightColors"
-          [chartType]="'bar'">
-  </canvas>
-  <div *ngFor="let item of patientService.height, let i = index " class="center">
-    <p *ngIf="i < 1">
-      As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
-    </p>
-    <h3 *ngIf="i < 1" class="height">
-      {{item.height}}{{item.unit}}
-    </h3>
-  </div>
-</div>
-<!--Pulse-->
-<div class="container">
-  <canvas baseChart *ngIf="patientService.pulseData.length > 0"
-          [datasets]="patientService.pulseData"
-          [labels]="patientService.pulseTime"
-          [options]="pulseOptions"
-          [colors]="pulseColors"
-          [chartType]="'line'">
-  </canvas>
-  <div *ngFor="let item of patientService.pulse, let i = index " class="center">
-    <p *ngIf="i < 1">
-      As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
-    </p>
-    <h3 *ngIf="i < 1" class="pulse">
-      {{item.pulse}}{{item.unit}}
-    </h3>
-  </div>
-</div>
-<!--Weight-->
-<div class="container">
-  <canvas baseChart *ngIf="patientService.weightData.length > 0"
-          [datasets]="patientService.weightData"
-          [labels]="patientService.weightTime"
-          [options]="weightOptions"
-          [colors]="weightColors"
-          [chartType]="'line'">
-  </canvas>
-  <div *ngFor="let item of patientService.weight, let i = index " class="center">
-    <p *ngIf="i < 1">
-      As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
-    </p>
-    <h3 *ngIf="i < 1" class="weight">
-      {{item.weight}}{{item.unit}}
-    </h3>
-  </div>
 
+<!--BodyTemperature-->
+<div class="grafikon" class="col-md-6">
+  <div class="panel panel-warning">
+    <div class="panel-heading">
+      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <h3 class="panel-title">Body Temperature</h3>
+    </div>
+    <div class="panel-body">
+      <canvas baseChart *ngIf="patientService.bodyTemperatureData.length > 0"
+              [datasets]="patientService.bodyTemperatureData"
+              [labels]="patientService.bodyTemperatureTime"
+              [options]="bodyTemperatureOptions"
+              [colors]="bodyTemperatureColors"
+              [chartType]="'bar'">
+      </canvas>
+      <div *ngFor="let item of patientService.bodyTemperature, let i = index " class="center">
+        <p *ngIf="i < 1">
+          As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
+        </p>
+        <h3 *ngIf="i < 1" class="bodytemperature">
+          {{item.temperature}} {{item.unit}}
+        </h3>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!--Height-->
+<div class="grafikon" class="col-md-6">
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <h3 class="panel-title">Height</h3>
+    </div>
+    <div class="panel-body">
+      <canvas baseChart *ngIf="patientService.heightData.length > 0"
+              [datasets]="patientService.heightData"
+              [labels]="patientService.heightTime"
+              [options]="heightOptions"
+              [colors]="heightColors"
+              [chartType]="'bar'">
+      </canvas>
+      <div *ngFor="let item of patientService.height, let i = index " class="center">
+        <p *ngIf="i < 1">
+          As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
+        </p>
+        <h3 *ngIf="i < 1" class="height">
+          {{item.height}} {{item.unit}}
+        </h3>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Pulse-->
+<div class="grafikon" class="col-md-6">
+  <div class="panel panel-success">
+    <div class="panel-heading">
+      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <h3 class="panel-title">Pulse</h3>
+    </div>
+    <div class="panel-body">
+      <canvas baseChart *ngIf="patientService.pulseData.length > 0"
+              [datasets]="patientService.pulseData"
+              [labels]="patientService.pulseTime"
+              [options]="pulseOptions"
+              [colors]="pulseColors"
+              [chartType]="'line'">
+      </canvas>
+      <div *ngFor="let item of patientService.pulse, let i = index " class="center">
+        <p *ngIf="i < 1">
+          As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
+        </p>
+        <h3 *ngIf="i < 1" class="pulse">
+          {{item.pulse}} {{item.unit}}
+        </h3>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Weight-->
+<div class="grafikon" class="col-md-6" >
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <h3 class="panel-title">Weight</h3>
+    </div>
+    <div class="panel-body">
+      <canvas baseChart *ngIf="patientService.weightData.length > 0"
+              [datasets]="patientService.weightData"
+              [labels]="patientService.weightTime"
+              [options]="weightOptions"
+              [colors]="weightColors"
+              [chartType]="'line'">
+      </canvas>
+      <div *ngFor="let item of patientService.weight, let i = index " class="center">
+        <p *ngIf="i < 1">
+          As of: {{item.time | date:"dd-MMM-yyyy' at 'HH:mm"}}<br>
+        </p>
+        <h3 *ngIf="i < 1" class="weight">
+          {{item.weight}} {{item.unit}}
+        </h3>
+      </div>
+    </div>
+  </div>
 </div>
