--- a/src/app/components/patient-info/patient-info.component.html
+++ b/src/app/components/patient-info/patient-info.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <div class="col-md-3">
-      aaaa
+    <div class="col-md-3"  align="center">
+      <img src="https://dev.ehrscape.com/demo/img/female.png" alt="nemat slika" class="img-circle" style="border: 3px solid black">
     </div>
     <div class="col-md-6">
       <h4>{{patientService.userModel.firstNames}}{{patientService.userModel.lastNames}}</h4><br>
@@ -12,8 +12,10 @@
     <div class="mask">
 
     </div>
-    <div class="col-md-3">
-      aaaaa
+
+    <div class="col-md-3"  align="center">
+      <p>Healthcare team:</p>
+      <img src="https://dev.ehrscape.com/demo/img/doctor2.png" alt="nemat slika" class="img-circle">
     </div>
   </div>
 </div>
