--- a/src/app/components/patient-status/patient-status.component.html
+++ b/src/app/components/patient-status/patient-status.component.html
@@ -2,13 +2,10 @@
   <div class="panel-body">
     <div class="col-md-8">
 
-      <div class="row">
+      <div class="row" align="center">
         <div class="col-md-4">
-          <div class="center">
             <p>Age</p>
             <span>{{patientService.userModel.age | number:'.0-1'}}</span>
-          </div>
-
         </div>
         <div class="col-md-4">
           <p>Weight</p>
@@ -53,11 +50,12 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4" align="center">
       <div *ngFor="let item of patientService.height, let i = index ">
-        <p *ngIf="i < 1">
-          Height: {{item.height}}{{item.unit}}
-        </p>
+        <h4 *ngIf="i < 1">
+          <img src="https://dev.ehrscape.com/demo/img/body-blank-female.png" alt="HTML5 Icon">
+          Height {{item.height}}{{item.unit}}
+        </h4>
       </div>
     </div>
   </div>
