--- a/src/app/components/patient-timeline/patient-timeline.component.html
+++ b/src/app/components/patient-timeline/patient-timeline.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary" >
+<div class="panel panel-primary">
   <div class="panel-heading">
     <span style="float:right" class="glyphicon glyphicon-remove"></span>
     <h3 class="panel-title">Timeline</h3>
@@ -144,10 +144,10 @@
 </div>
 
 <!--Weight-->
-<div class="grafikon" class="col-md-6" >
+<div class="grafikon" class="col-md-6" *ngIf="hideContent">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <span style="float:right" (click)="hideContent = false" class="glyphicon glyphicon-remove"></span>
       <h3 class="panel-title">Weight</h3>
     </div>
     <div class="panel-body">
