--- a/src/app/components/patient-timeline/patient-timeline.component.css
+++ b/src/app/components/patient-timeline/patient-timeline.component.css
@@ -21,10 +21,11 @@
 .weight{
   color: #3BAFDA;
 }
-
-
-/*.panel-primary {*/
-  /*background-color: #3bafda;*/
-  /*color: white;*/
-  /*border-color: #3bafda;*/
-/*}*/
+.scroll {
+  height: 370px;
+  overflow: auto;
+  padding: 15px
+}
+.list-group-item{
+  background-color: #dcdfe3;
+}
