--- a/src/app/components/patient-timeline/patient-timeline.component.css
+++ b/src/app/components/patient-timeline/patient-timeline.component.css
@@ -1,8 +1,6 @@
 .chart {
   display: block;
 }
-.grafikon {
-}
 .center{
   text-align: center;
 }
@@ -28,4 +26,38 @@
 }
 .list-group-item{
   background-color: #dcdfe3;
+}
+.timeline-icon {
+  width: 40px;
+  height: 40px;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  font-size: 1.4em;
+  line-height: 40px;
+  color: #fff;
+  background: #3498DB;
+  border-radius: 50%;
+  box-shadow: 0 0 0 8px #dcdfe3;
+  text-align: center;
+
+}
+
+.timeline:before {
+  content: '';
+  position: absolute;
+  top: 45px;
+  bottom: 0;
+  width: 10px;
+  background: #dcdfe3;
+  left: -6%;
+}
+
+.timeline > li .timeline-date {
+  display: block;
+  width: 30%;
+  padding-right: 100px;
+  position: absolute;
 }
